--- a/.github/workflows/github-build-and-deploy.yml
+++ b/.github/workflows/github-build-and-deploy.yml
@@ -29,7 +29,7 @@ jobs:
         #   app_location: "src" # App source code path relative to repository root
         #   api_location: "api" # Api source code path relative to repository root - optional
         #   output_location: "public" # Built app content directory, relative to app_location - optional
-          app_location: "src" # App source code path
+          app_location: "/" # App source code path
           api_location: "" # Api source code path - optional
           output_location: "build" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
